# BitFold

./: .gitignore  ADVANCED_FEATURES.md  AUTHENTICATION_FIX.md  Cargo.toml  DEMO_SCRIPT.md  FIRST_PLACE_ANALYSIS.md  FORM_DATA.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DESCRIPTION.md  QUICK_START_AR.md  README.md  REAL_DATA_VERIFICATION.md  STEP_BY_STEP_GUIDE.md  STRUCTURE.md  TESTING_GUIDE.md  TESTNET_DEPLOYMENT.md  dfx.json  start.sh  حل_مشكلة_التوثيق.md
.github/workflows/: ci.yml
.kiro/specs/testnet-deployment/: design.md  (+2 more)
canisters/: IMPLEMENTATION_LOG.md  README.md
canisters/frontend_canister/: dfx.json
canisters/governance/: Cargo.toml  dfx.json
canisters/indexer_stub/: Cargo.toml  dfx.json
canisters/indexer_stub/src/: indexer_stub.did  lib.rs
canisters/vault/: Cargo.toml  dfx.json  vault.did
canisters/vault/src/: api.rs  bitcoin.rs  ckbtc.rs  helpers.rs  lib.rs  ordinals.rs  runes.rs  schnorr.rs  solana.rs  state.rs  types.rs  vetkeys.rs
canisters/vault/tests/: additional_property_tests.rs  api_property_tests.proptest-regressions  api_property_tests.rs  bitcoin_tests.proptest-regressions  bitcoin_tests.rs  ckbtc_tests.rs  ordinals_integration_test.rs  ordinals_tests.rs  upgrade_integration_test.rs  vault_tests.rs
demo/: README.md  demo-script.md
docs/: api-reference.md  ckbtc-integration.md  design.md  integration-flowchart.md  ordinals-flow.md  roadmap.md  security-model.md  system-architecture.md  use-case-flowchart.md
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
scripts/: deploy_local.sh  deploy_testnet.sh  generate_types.sh
test/: integration_tests.rs  vault_tests.rs
(+41 files in other folders)
