[package]
name = "indexer_stub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-cdk-macros = "0.19"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
codegen-units = 1

