[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
codegen-units = 1

