[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ic-cdk = "0.19"
ic-cdk-macros = "0.19"
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
serde_json = "1.0"
ic-btc-interface = "0.2"
ic-cdk-timers = "1.0"
hex = "0.4"
# For property-based testing
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
codegen-units = 1

